<resources>
    <string name="app_name">smartgoat</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="masuk">MASUK</string>
    <string name="email">Email</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="domisili_peternak">Domisili Peternak</string>
    <string name="lokasi_peternak">Lokasi Peternak</string>
    <string name="daftar">Daftar</string>
    <string name="home">HOME</string>
    <string name="weather">Weather</string>
    <string name="status_normal">Status Normal</string>
    <string name="kelembapan_50">Kelembapan 50%</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kontrol">Kontrol</string>
    <string name="berita">Berita</string>
    <string name="registrasi">Registrasi</string>
    <string name="riwayat_keturunan">Riwayat Keturunan</string>
    <string name="tanda">:</string>
    <string name="rfid_induk_betina">RFID Induk Betina</string>
    <string name="lokasi">Lokasi</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="warna">Warna</string>
    <string name="bobot_lahir">Bobot Lahir</string>
    <string name="saudara">Saudara</string>
    <string name="bobot_sekarang">Bobot Sekarang</string>
    <string name="profile">Profile</string>
    <string name="messangeKonsentrat">Jadi konsentrat yang dibutuhkan oleh kambing No. 001 dengan bobot 30 Kg dan umur 10 bulan adalah sebesar 600 Gram per hari atau setara 2% dari bobot kambing</string>
    <string name="message_hijauan">Jadi hijauan yang dibutuhkan oleh kambing No. 001 dengan bobot 30 Kg dan umur 10 bulan adalah sebesar 3 Kilogram per hari atau setara 10% dari bobot kambing</string>
</resources>